fixed the overflow

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
 
 h1, h2, h3, h4, h5 {
     font-family    : "Lato", sans-serif;
-    color          : #fff;©
+    color          : #fff;
     text-transform : uppercase;
     margin         : 0;
     padding        : 0;
@@ -110,6 +110,12 @@ a, a:hover {
 
 /* Header
 ================================================== */
+.hidden-space{
+    height: 350px; 
+    width: 100%;
+    overflow-x: hidden;
+}
+
 .navbar-wrapper {
     margin-top : 65px;
 }
@@ -1234,11 +1240,11 @@ a#to-top {
 
 .contact-info li {
     float : left;
-    width : 25%;
+    width : 33%;
 }
 
 .contact-info li.first {
-    width : 30%;
+    width : 35%;
 }
 
 .contact-info li p > i {
